# learn_FastApi

./: .pre-commit-config.yaml  Dockerfile  README.MD  alembic.ini  main.py  pyproject.toml
app/: .gitignore  config.py  database.py  main.py
app/hotels/: models.py
app/migration/: env.py
app/migration/versions/: 31556e060877_init_migration.py
public/: index.html
todos/: model.py  todo.py
